--- a/BackEnd/Demo/.settings/org.eclipse.wst.common.component
+++ b/BackEnd/Demo/.settings/org.eclipse.wst.common.component
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        	
+            	
+    
     
     <wb-module deploy-name="demo-1.0.0-BUILD-SNAPSHOT">
-                        
+                                
+        
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                		
+                        		
+        
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                		
+                        		
         
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                		
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-                		
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp/WEB-INF/views/jsp"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                        		
+        
         
         <property name="java-output-path" value="target/classes"/>
-                        
+                                
+        
         
         <property name="context-root" value="demo"/>
-                	
+                        	
+    
     
     </wb-module>
-        
+            
+
 
 </project-modules>
