--- a/FrontEnd/src/components/Header.css
+++ b/FrontEnd/src/components/Header.css
@@ -5,7 +5,10 @@ header{
 .header-logo{
     margin-left: 10%;
 }
-
+.header-logo a{
+    display: flex;
+    align-items: center;
+}
 .header-logo-image{
     width: 80px;
 }
