로그인, 해시태그 (다시 수정해야함)

--- a/FrontEnd/src/pages/HashTag.module.css
+++ b/FrontEnd/src/pages/HashTag.module.css
@@ -4,7 +4,7 @@
     font-weight: bold;
 }
 .sub {
-    border: 1.7px solid #E9BE78;
+    border: 2px solid #E9BE78;
     border-radius: 15px;
     width: 350px;
     height: 30px;
@@ -16,38 +16,38 @@
     margin-top: 2.5px;
 }
 .body {
-    border-top: 1.7px solid #656563;
-    border-bottom: 1.7px solid #656563;
+    border-top: 2px solid #656563;
+    border-bottom: 2px solid #656563;
+    width: 1280px;
+    height: 400px;
     margin-top: 50px;
-    margin-left: 15%;
-    width: 900px;
-    height: 300px;
+    margin-left: 212px;
 }
 .content1 {
     border: 1.3px solid #606060;
-    width: 230px;
-    height: 230px;
-    margin-left: 60px;
+    width: 330px;
+    height: 300px;
+    margin-left: 72px;
     background-color: #f0f0f0;
 }
 .content2 {
     border: 1.3px solid #606060;
-    width: 230px;
-    height: 230px;
-    margin-left: 45px;
+    width: 330px;
+    height: 300px;
+    margin-left: 74px;
     background-color: #f0f0f0;
 }
 .content3 {
     border: 1.3px solid #606060;
-    width: 230px;
-    height: 230px;
-    margin-left: 45px;
+    width: 330px;
+    height: 300px;
+    margin-left: 74px;
     background-color: #f0f0f0;
 }
 .name {
     color: #5C411D;
     font-weight: bold;
-    font-size: 1.3em;
+    font-size: 1.6em;
     margin-top: 30px;
     margin-left: 30px;
     float: left;
@@ -58,14 +58,40 @@
 .title {
     color: #5C411D;
     font-weight: bold;
-    font-size: 1.3em;
-    margin-top: 10px;
+    font-size: 1.5em;
+    margin-top: 30px;
     margin-left: 30px;
     float: left;
 }
 .date {
     color: #7E602D;
-    margin-top: -20px;
+    font-size: 1.3em;
+    margin-top: -13px;
     margin-left: 30px;
     float: left;
+}
+ul {
+	list-style: none;
+    display: inline-block;
+    margin-left: 40%;
+}
+ul li {
+    float:left;
+    margin-left: 9px;
+}
+ul li a {
+    float: left;
+    padding: 9px;
+    width: 40px;
+    height: 38px;
+	color:#5C411D;
+    border:1px solid#5C411D;
+    border-radius: 5px;
+	text-align:center;
+}
+ul li a:hover, ul li a:focus {
+	color:#fff;
+    border: 2px solid #5C411D;
+    border-radius: 5px;
+	background-color: #5C411D;
 }
