--- a/FrontEnd/src/pages/Login.module.css
+++ b/FrontEnd/src/pages/Login.module.css
@@ -1,5 +1,7 @@
 .background {
     background-image: url(./LoginBackground.jpg);
+    width: 100%;
+    height: 100%;
 }
 .arrowLeft {
     margin-top: 40px;
@@ -12,7 +14,7 @@
 }
 .visualUp {
     margin-top: -10px;
-    font-size: 2.2rem;
+    font-size: 2.2rem; 
     color: #7a5e2e;
 }
 .body {
@@ -23,6 +25,7 @@
     height: 380px;
     justify-content: center;
     align-items: center;
+    border: none;
 }
 .btn1 {
     width: 220px;
