--- a/FrontEnd/public/css/reset.css
+++ b/FrontEnd/public/css/reset.css
@@ -1,25 +1,22 @@
 @font-face{ 
     font-family:'fradmit'; 
-    src:url('/FrontEnd/public/font/FRADMIT.TTF.ttf') format('truetype');
+    src:url('/font/FRADMIT.ttf') format('truetype');
 }
 
 @font-face{ 
     font-family:'fradmd'; 
-    src:url('/FrontEnd/public/font/FRAMD.TTF.ttf') format('truetype');
+    src:url('/font/FRAMD.ttf') format('truetype');
 }
 
 @font-face{ 
     font-family:'lgRegular'; 
-    src:url('/FrontEnd/public/font/LG_SMART_UI-REGULAR.TTF.ttf') format('truetype');
+    src:url('/font/LG_REGULAR.ttf') format('truetype');
 }
 
 @font-face{ 
     font-family:'lgSemibold'; 
-    src:url('/FrontEnd/public/font/LG_SMART_UI-SEMIBOLD.TTF.ttf') format('truetype');
+    src:url('/font/LG_SEMIBOLD.ttf') format('truetype');
 }
-
-
-
 
 /* CSS 초기화 */
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, 
