--- a/FrontEnd/src/pages/GoalSet.module.css
+++ b/FrontEnd/src/pages/GoalSet.module.css
@@ -36,7 +36,43 @@
     font-size: 1.2em;
 }
 .graphdesc {
-    color: #5C411D;
+    color: #000000;
     font-weight: bold;
     font-size: 1.0em;
 }
+.open {
+    color: #5C411D;
+    font-weight: bold;
+    font-size: 1.3em;
+    margin-top: 28px;
+    margin-left: 24px;
+    float: center;
+}
+.btn1 {
+    width: 220px;
+    height: 35px;
+    margin-left: 18.5%;
+    margin-top: 10px;
+    border-radius: 12px;
+    border: 1;
+    background-color: #f5dfbb;
+    color: #000000;
+    border-color: #000000;
+}
+.btn2 {
+    width: 220px;
+    height: 35px;
+    margin-left: 18.5%;
+    margin-top: 10px;
+    border-radius: 12px;
+    border: 1;
+    background-color: #FFFFFF;
+    color: #000000;
+    border-color: #000000;
+}
+.font {
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 5px;
+}
+
