--- a/FrontEnd/src/pages/Visualize.css
+++ b/FrontEnd/src/pages/Visualize.css
@@ -1,6 +1,7 @@
-.graph-header{
+.graph-con{
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 .select-date-con{
     margin-bottom: 10px;
@@ -23,6 +24,10 @@
     display: flex;
 }
 
+#group>div:first-child{
+    width: 100%;
+}
+
 .visual-graph-con>div:first-child{
     display: inline-block;
     width:95%;
@@ -38,9 +43,9 @@
 }
 .setting-btn{
     position: absolute;
-    bottom: -15%;
+    bottom: 0;
     font-size: 2rem;
-    right: 3%;
+    right: 2%;
     cursor: pointer;
     color: #5C411D;
 }
@@ -48,4 +53,21 @@
     padding: 5px;
     border-radius: 5rem;
     border: 3px solid #5C411D;
+}
+
+.sns-con{
+    display: inline-block;
+    margin: 20px 1%;
+}
+.sns-btn{
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    outline : none;
+    cursor: pointer;
+}
+.sns-btn>img{
+    width: 100%;
 }
