--- a/FrontEnd/src/pages/Visualize.css
+++ b/FrontEnd/src/pages/Visualize.css
@@ -1,15 +1,25 @@
+#contents>.ant-col{
+    display: flex;
+    flex-direction: column;
+}
+
 .graph-con{
     display: flex;
     flex-direction: column;
-    overflow: hidden;
 }
 .select-date-con{
     margin-bottom: 10px;
+    display: flex;
+    z-index:1;
+    width: 30%;
+}
+.graph-con>.ant-tabs{
+    transform: translate(0px, -50px);
 }
 .date-title{
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    margin-right: 10px;
 }
 .date-title>p{
     margin: 0;
@@ -20,6 +30,10 @@
 .date-title svg{
     font-size:22px;
 }
+.graph-tab-con .ant-tabs-nav-wrap {
+    justify-content: flex-end!important;
+}
+
 .select-graph-con{
     display: flex;
 }
@@ -28,18 +42,20 @@
     width: 100%;
 }
 
+.visual-graph-con{
+    display: flex;
+}
 .visual-graph-con>div:first-child{
-    display: inline-block;
-    width:95%;
+    /*display: inline-block;*/ 
+    max-width: 100%;
+    min-width: 50%;
+    flex-basis: auto;
+    flex-shrink: 1;
+    flex-grow: 1;
     height: auto;
 }
-.dailycheck-btn{
-    display: inline-block;
-    width:5%;
-    align-items: center;
-    font-size: 2rem;
-    cursor: pointer;
-    color: #5C411D;
+.visual-graph-con canvas{
+    height: 350px!important;
 }
 .setting-btn{
     position: absolute;
@@ -60,8 +76,8 @@
     margin: 20px 1%;
 }
 .sns-btn{
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    max-height: 35px;
     background-color: transparent;
     border: none;
     padding: 0;
@@ -70,4 +86,39 @@
 }
 .sns-btn>img{
     width: 100%;
+}
+
+.dailycheck-drawer{
+    animation: growDrawer 1s ease-in-out 0s 1 forwards;
+    flex-basis: auto;
+    flex-grow: 0;
+    flex-shrink: 0;
+    border-left: 1px solid #5D4215;
+    background-color: white;
+    z-index: 1;
+    position: relative;
+}
+@keyframes growDrawer{
+    from{
+        width:0%;
+    }
+    to{
+        width: 50%;
+    }
+}
+
+.dailycheck-btn{
+    align-items: center;
+    font-size: 2rem;
+    cursor: pointer;
+    color: #5C411D;
+    position: absolute;
+    top: 40%;
+}
+.visual-graph-con .left{
+    right: 0;
+}
+.dailycheck-drawer .right{
+    left: -4%;
+    background-color: white;
 }
