--- a/FrontEnd/src/components/PageHeader.css
+++ b/FrontEnd/src/components/PageHeader.css
@@ -8,12 +8,20 @@
     color: #5C411D;
 }
 .page-title>h2{
-    font-weight: 600;
-}
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) var(--unnamed-font-size-50)/var(--unnamed-line-spacing-59) var(--unnamed-font-family-lg-smart-ui);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    color: var(--unnamed-color-5d4215);
+    text-align: center;
+    font: normal normal 600 40px/59px LG Smart UI;
+    letter-spacing: 0px;
+    color: #5D4215;
+    opacity: 1;
+    }
 .page-subtitle>h5{
     margin: 0;
     border-radius: 15px;
     border: 1px solid #CFA051;
     padding: 2px 20px;
     display: inline-block;
+    font-size: large;
 }
