--- a/FrontEnd/src/pages/FourthComponent.css
+++ b/FrontEnd/src/pages/FourthComponent.css
@@ -1,5 +1,11 @@
-.component.fourth-component {
-  background-color: rgb(243,239,236);
+
+.fourth-component .bg-img {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
 }
 
 .fourth-container{
