추가된 배경 이미지 css 수정 및 디자인에 맞춰 수정

--- a/FrontEnd/src/pages/SecondComponent.css
+++ b/FrontEnd/src/pages/SecondComponent.css
@@ -1,73 +1,106 @@
 .second-component {
-    background-color: rgb(235, 135, 135);
     display: flex;
     position: relative;
     flex-direction: column;
     align-items: center;
-    color: honeydew;
   }
  
+  .second-component .bg-img {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+  }
+
   .second-component .second-container{
     display: flex;
     flex-direction: column;
     padding-top: 40px;
   }
 
+  .second-component .second-component-text {
+    text-align: center;
+    height: 150px;
+  }
+
+  
+  .second-box-container{
+    display: inline-flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    text-align: center;
+    width :1400px;
+    height: 540px;
+    background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    opacity: 0.7;
+    margin-top: 2rem;
+  }
+  
 
   .second-box-content:not(:last-of-type){
-    border-right: ivory 1px solid;
+    border-right: rgb(168, 137, 96) 3px solid;
     margin-right: 0;
     padding-right: 20px;
+    width: 320px;
   }
 
   .second-box-content:last-of-type{
     margin-right : 0;
     margin-left: 2rem;
+    width: 320px;
+    padding-right: 1.7rem;
   }
 
-  .second-box-container{
-    display: inline-flex;
-    flex-direction: row;
-    background-color: rgb(0, 0, 0,0.25);
-    justify-content: space-around;
-    padding: 1rem;
-    text-align: center;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    /*왜 가운데로 안가지..->align-itmes*/
-    width :870px;
-    height: 420px;
-  }
-  
   .second-box-content{
     margin: 2rem;
   }
- 
+  
+  .second-box-content img{
+    height: 200px;
+    width:  200px;
+    border-radius: 100px;
+    margin-bottom: 30px;
+  }
+
   .second-box-content h3{
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 600;
+    font: var(--unnamed-font-style-normal) normal bold 28px/33px var(--unnamed-font-family-lg-smart-ui);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    color: var(--unnamed-color-5d4215);
+    text-align: center;
+    font: normal normal bold 25px/33px LG Smart UI;
+    letter-spacing: 0px;
+    color: #5D4215;
+    opacity: 1;
   }
 
   .second-box-content h4{
     font-weight: 600;
-  }
-
-  .second-box-content h4,p{
+    font: var(--unnamed-font-style-normal) normal bold 17px/20px var(--unnamed-font-family-lg-smart-ui);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    text-align: center;
+    font: normal normal bold 16.5px/20px LG Smart UI;
+    letter-spacing: 0px;
+    color: #80612D;
+    opacity: 1;
     margin-top: 2rem;
   }
-  
-  .second-box-content img{
-    height: 120px;
-    width:  120px;
-    border-radius: 100px;
-    margin-bottom: 30px;
-  }
-  
-  .second-component .second-component-text {
-    text-align: center;
-    height: 150px;
-  }
-  
+
   .second-box-content p{
     font-size: 10px;
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 17px/24px var(--unnamed-font-family-lg-smart-ui);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    color: var(--unnamed-color-5d4215);
+    text-align: center;
+    font: normal normal normal 17px/24px LG Smart UI;
+    letter-spacing: 0px;
+    color: #5D4215;
+    opacity: 1;
+    margin-top: 2rem;
   }
