--- a/FrontEnd/src/components/FourthBox.css
+++ b/FrontEnd/src/components/FourthBox.css
@@ -1,37 +1,29 @@
   .fourth-box-content{
-    width: 150px;
-    height : 250px;
+    width: 200px;
+    height : 300px;
     margin: 10px;
     display: inline-block;
-    background: #333;
+    background: white;
+    opacity: 70%;
     border-radius: 5px;
-    color:rgb(231,229,230);
     padding: 3px 8px;
     text-align: center;
   }
-  
-  .fourth-box-content.only{
-    background: limegreen;
-    border:solid #333 5px;   /* style지정하지 않으면 none이다 */
-  }
-  
-  .fourth-box-content h1{
-    color:rgb(231,229,230);
-  }
-  
-  .fourth-box-content h3{
-    color:rgb(231,229,230);
+    
+  .fourth-box-content h3{     /* 이름 굵게 */
+    color:#5C411D;
+    font-weight: bold;
   }
   
   .fourth-box-content h5{
-    color:rgb(231,229,230);
+    color:#5C411D;
   }
   
   .fourth-box-content h4{
-    color:rgb(231,229,230);
+    color:#5C411D;
   }
   
-  .fourth-box-content img{
+  .fourth-img>img{
     margin-top:10%;
     height: 100px;
     width:  100px;
@@ -39,3 +31,10 @@
     padding-bottom:5%;
   }
   
+  .internet{
+    width:18px;
+    font-size: 2rem;
+    /* cursor: pointer; */
+    color: #5C411D;
+
+  }
