--- a/FrontEnd/src/pages/HashTag.css
+++ b/FrontEnd/src/pages/HashTag.css
@@ -1,3 +1,28 @@
+.page-title-con{
+    margin:15px 0;
+}
+.page-title-con div{
+    text-align: center;
+}
+.page-title-con div>*{
+    color: #5C411D;
+}
+.page-title>h2{
+    font-weight: 600;
+}
+.page-subtitle>h5{
+    margin: 0;
+    border-radius: 15px;
+    border: 1px solid #CFA051;
+    padding: 2px 20px;
+    display: inline-block;
+}
+.hash-input {
+    
+}
+.hash-submit {
+
+}
 .hash-body {
     border-top: 2px solid #656563;
     border-bottom: 2px solid #656563;
@@ -42,7 +67,7 @@
 ul {
 	list-style: none;
     display: inline-block;
-    margin-left: 38%;
+    margin-left: 37.5%;
 }
 ul li {
     float:left;
