버튼 위치 수정

--- a/FrontEnd/src/pages/FullPage.css
+++ b/FrontEnd/src/pages/FullPage.css
@@ -27,12 +27,13 @@ h2 {
 .pagination-additional-class {
     flex-direction: column;
     position: fixed;
-    width: 70%;
+    width: 65%;
     top: 40%;
     padding-right : 5%;
     display: inline-flex;
     align-items:flex-end;    
     list-style: none;
+    z-index: 20 !important;
 }
 
 .pagination-additional-class > li > a, .pagination-additional-class > li> span {
