--- a/FrontEnd/src/components/Graph.css
+++ b/FrontEnd/src/components/Graph.css
@@ -108,3 +108,9 @@
     border-radius: 5rem;
     border: 3px solid #5C411D;
 }
+#visible>*{
+    display: inline-block;
+}
+#not-visible>*{
+    display: none;
+}
