--- a/FrontEnd/src/pages/HashTag.css
+++ b/FrontEnd/src/pages/HashTag.css
@@ -45,8 +45,9 @@
 }
 .hash-submit {
     width: 65px;
-    height: 48px;
+    height: 49px;
     float: right;
+    margin-top: -1px;
     border: 0;
     background-color: #F0C379;
     color: #5D4215;
