--- a/FrontEnd/src/pages/GoalSet.module.css
+++ b/FrontEnd/src/pages/GoalSet.module.css
@@ -75,3 +75,12 @@
     font-weight: bold;
     margin-top: 5px;
 }
+.input{
+    height: 20px;
+    resize: none;
+    width: 100%;
+    background-color: white;
+    border-radius: 30px;
+    border-color: #5C411D;
+    font-weight: 500;
+}
