목표설정, 목표리스트 api post get 호출 초안 커밋

--- a/FrontEnd/src/pages/GoalSet.module.css
+++ b/FrontEnd/src/pages/GoalSet.module.css
@@ -75,3 +75,10 @@
     font-weight: bold;
     margin-top: 5px;
 }
+.input{
+    height: 30px;
+    width: 100%;
+    background-color: white;
+    border-color: #5C411D;
+    font-weight: 500;
+}
