--- a/FrontEnd/src/components/DailyCheck.css
+++ b/FrontEnd/src/components/DailyCheck.css
@@ -80,6 +80,12 @@
     font-size: 14px;
 }
 
+.save-btn{
+    background-color: #FFE5B24D;
+    border: 2px solid #5D4215;
+    cursor: pointer;
+}
+
 /* stars */
 .star_on, .star_off{
     font-size: 1.5rem;
