로그인, 해시태그 api만 연동(값 가져오는거 해야함)

--- a/FrontEnd/src/pages/Login.css
+++ b/FrontEnd/src/pages/Login.css
@@ -30,7 +30,7 @@
 .google-btn {
     width: 280px;
     height: 46px;
-    margin: 0 auto;
+    margin-left: 60px;
     border-radius: 12px;
     border: 0;
     background-color: red;
@@ -39,7 +39,7 @@
 .kakao-btn {
     width: 280px;
     height: 46px;
-    margin: 0 auto;
+    margin-left: 60px;
     border-radius: 12px;
     border: 0;
     background-color: yellow;
@@ -48,7 +48,7 @@
 .sns-btn {
     width: 280px;
     height: 46px;
-    margin: 0 auto;
+    margin-left: 60px;
     border-radius: 12px;
     border: 0;
     background-color: #0080eb;
