--- a/FrontEnd/src/pages/HashTag.css
+++ b/FrontEnd/src/pages/HashTag.css
@@ -78,21 +78,25 @@
     float: left;
 }
 .hash-graph {
+    float: left;
+    width: 100%;
+    height: 200px;
     margin-top: 3px;
+    border: 1px solid black;
 }
 .hash-goal {
     color: #5C411D;
     font-weight: bold;
     font-size: 1.5em;
-    margin-top: 60px;
     margin-left: 24px;
+    margin-top: 10px;
     float: left;
 }
 .hash-date {
     color: #7E602D;
     font-size: 1.1em;
-    /*margin-top: -18px;*/
-    margin-left: 24px;
+    margin-top: 50px;
+    margin-left: -140px;
     float: left;
 }
 ul {
