--- a/FrontEnd/src/components/DailyCheck.css
+++ b/FrontEnd/src/components/DailyCheck.css
@@ -80,10 +80,11 @@
     font-size: 14px;
 }
 
-.save-btn{
+.save-btn, .delete-btn{
     background-color: #FFE5B24D;
     border: 2px solid #5D4215;
     cursor: pointer;
+    margin-right: 5px;
 }
 
 /* stars */
