--- a/FrontEnd/src/pages/FullPage.css
+++ b/FrontEnd/src/pages/FullPage.css
@@ -27,9 +27,11 @@ h2 {
 .pagination-additional-class {
     flex-direction: column;
     position: fixed;
-    width: 65%;
+    width: 10px;
     top: 40%;
     padding-right : 5%;
+    /* margin-left: 110rem; */
+    margin-left: 90%;
     display: inline-flex;
     align-items:flex-end;    
     list-style: none;
@@ -73,7 +75,7 @@ h2 {
     width: 10px;
     height: 10px;
     color: #5C411D;
-    border: 1px solid#5C411D;
+    /* border: 1px solid#5C411D; */
     text-align: center;
     margin-top: 15px;
   }
