--- a/FrontEnd/src/pages/HashTag.css
+++ b/FrontEnd/src/pages/HashTag.css
@@ -58,10 +58,17 @@
     font-weight: normal;
 }
 .hash-col {
-    border: 1.3px solid #606060;
+    width: 80%!important;
+    flex-wrap: nowrap!important;
+    border-top: 1.3px solid #606060;
+    border-bottom: 1.3px solid #606060;
     width: 380px;
     float: left;
     margin: 0 auto;
+}
+.hash-col>div{
+    margin: 20px 3% 20px 0;
+    border: 1px solid black;
 }
 .hash-userName {
     color: #5C411D;
@@ -76,7 +83,6 @@
     width: 100%;
     height: 200px;
     margin-top: 3px;
-    border: 1px solid black;
 }
 .hash-goal {
     color: #5C411D;
@@ -119,4 +125,16 @@ ul li a:hover, ul li a:focus {
     border: 2px solid #5C411D;
     border-radius: 5px;
 	background-color: #5C411D;
+}
+
+/* heeeun */
+.hash-graph>div{
+    width: 100%;
+    height: 100%;
+}
+.hash-submit{
+    cursor: pointer;
+}
+.hash-post{
+    width: 30%;
 }
