--- a/FrontEnd/src/pages/HashTag.css
+++ b/FrontEnd/src/pages/HashTag.css
@@ -17,9 +17,6 @@
     padding: 2px 20px;
     display: inline-block;
 }
-.hash-total {
-    overflow: auto;
-}
 .hash-top {
     width: 340px;
     height: 50px;
@@ -60,15 +57,16 @@
 .hash-col {
     width: 80%!important;
     flex-wrap: nowrap!important;
-    border-top: 1.3px solid #606060;
-    border-bottom: 1.3px solid #606060;
-    width: 380px;
+    border-top: 1.8px solid #80612D;
+    border-bottom: 1.8px solid #80612D;
     float: left;
     margin: 0 auto;
+    padding: 1.6%;
 }
 .hash-col>div{
-    margin: 20px 3% 20px 0;
-    border: 1px solid black;
+    margin: 0 3% 0 3%;
+    border: 1.73px solid #5D4215;
+    background-color: #ECECEC;
 }
 .hash-userName {
     color: #5C411D;
@@ -103,7 +101,8 @@
 ul {
 	list-style: none;
     display: inline-block;
-    margin: 46%;
+    width: 380px;
+    margin-left: 46%;
 }
 ul li {
     float:left;
