--- a/FrontEnd/src/pages/FifthComponent.css
+++ b/FrontEnd/src/pages/FifthComponent.css
@@ -1,5 +1,14 @@
+.bg-img {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  z-index: -1 !important;
+  width: 100%;
+  height: 100%;
+}
+
+
 .fifth-container {
-    background-image : url('../../src/img/BGimg.png');
     position:relative;
     width: 100%;
     height: 100%;
@@ -18,6 +27,7 @@
     height: 100%;
     display:flex;
     flex-direction: column;
+    z-index: 3 !important;
   }
   
   .fifth-box-content-container {
@@ -110,3 +120,4 @@
   .fifth-footer .icons .icon {
     margin : 5px;
   }
+  
