--- a/FrontEnd/src/pages/FourthComponent.css
+++ b/FrontEnd/src/pages/FourthComponent.css
@@ -1,15 +1,15 @@
-/* .fourth-component .bg-img {
+.fourth-component .bg-img {
   position: absolute;
   top: 0%;
   right: 0%;
-  z-index: -1;
+  /* z-index: -1; */
   width: 100%;
   height: 100%;
-} */
-
-.component.fourth-component{
-  background-image : url('../../src/img/BGimg.png');
 }
+
+/* .component.fourth-component{
+  background-image : url('../../src/img/BGimg.png');
+} */
 
 .fourth-container{
   /* display: flex; */
