--- a/FrontEnd/src/pages/GoalSet.module.css
+++ b/FrontEnd/src/pages/GoalSet.module.css
@@ -21,9 +21,8 @@
     color: #5C411D;
     font-weight: bold;
     font-size: 1.3em;
-    margin-top: 28px;
-    margin-left: 24px;
     float: left;
+    margin-bottom: 5px!important;
 }
 .ilmada {
     color: #5C411D;
@@ -35,40 +34,32 @@
     font-weight: bold;
     font-size: 1.2em;
 }
-.graphdesc {
-    color: #000000;
-    font-weight: bold;
-    font-size: 1.0em;
-}
 .open {
-    color: #5C411D;
+    color: #5D4215;
     font-weight: bold;
     font-size: 1.3em;
-    margin-top: 28px;
-    margin-left: 24px;
     float: center;
 }
 .btn1 {
-    width: 220px;
+    width: 150px;
     height: 35px;
-    margin-left: 18.5%;
-    margin-top: 10px;
     border-radius: 12px;
     border: 1;
     background-color: #f5dfbb;
-    color: #000000;
-    border-color: #000000;
+    color: #5D4215;
+    border-color: #5D4215;
+    margin-right: 10px;
+    cursor: pointer;
 }
 .btn2 {
-    width: 220px;
+    width: 150px;
     height: 35px;
-    margin-left: 20px;
-    margin-top: 10px;
     border-radius: 12px;
     border: 1;
     background-color: #FFFFFF;
-    color: #000000;
-    border-color: #000000;
+    color: #5D4215;
+    border-color: #5D4215;
+    cursor: pointer;
 }
 .font {
     font-size: 15px;
