--- a/FrontEnd/src/pages/Navigation.css
+++ b/FrontEnd/src/pages/Navigation.css
@@ -11,6 +11,7 @@
     padding: 0;
     background-color: rgb(255, 255, 255);
     list-style-type: none;
+    box-shadow: 5px 5px 5px rgb(180, 180, 180);
 }
 
 
