--- a/FrontEnd/src/pages/ThirdComponent.css
+++ b/FrontEnd/src/pages/ThirdComponent.css
@@ -64,6 +64,7 @@
     background: var(--unnamed-color-5d4215) 0% 0% no-repeat padding-box;
     background: #5D4215 0% 0% no-repeat padding-box;
     color : white;
+    font-size: x-large;
 }
 
 
