그래프 수정

--- a/FrontEnd/src/pages/ThirdComponent.css
+++ b/FrontEnd/src/pages/ThirdComponent.css
@@ -73,7 +73,7 @@
   }
 
 
-  .module-graph, .module-graph canvas{
+ .card-container-box .module-graph, .module-graph canvas{
     width: 100%!important;
     height: 330px !important;
 }
