--- a/FrontEnd/src/pages/Navigation2.css
+++ b/FrontEnd/src/pages/Navigation2.css
@@ -9,6 +9,7 @@
     margin: 0;
     margin-bottom: 10px;
     padding: 0;
+    padding-bottom: 10px;
     background-color: #FDF0D7;
     list-style-type: none;
     box-shadow: 0px 5px 5px rgb(180, 180, 180);
