--- a/FrontEnd/src/pages/GoalSet.css
+++ b/FrontEnd/src/pages/GoalSet.css
@@ -30,12 +30,14 @@
 }
 .goalset-btn-con{
     margin-top: 20px;
+    display: flex;
+    justify-content: flex-end;
 }
 .goalset-input-con span{
     margin-right: 5px;
 }
 .template-con{
-    border-radius: 12px;
+    border-radius: 2px;
     color: #5D4215;
     border: 2px solid #5D4215;
     padding: 5px 15px;
@@ -46,7 +48,7 @@
     align-items: center;
 }
 .selected-template{
-    background-color: #f5dfbb;
+    background-color: #FDF0D7;
 }
 .template-con:hover{
     box-shadow: 0 0 3px #5D4215;
@@ -59,6 +61,7 @@
     color: #5D4215;
     font-weight: bold;
     font-size: 1.0em;
+    margin-left: 10px;
 }
 .goalset-private>button{
     margin: 0 10px;
@@ -117,4 +120,17 @@
 .goalset-hashtag-subcon>input {
     width: 100px;
     margin-right: 2px;
+}
+.private-con{
+    flex-direction: row;
+    justify-content: flex-end;
+}
+.private-subcon{
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid;
+    padding: 5px;
+    border-radius: 2px;
 }
