--- a/FrontEnd/src/pages/HashTag.css
+++ b/FrontEnd/src/pages/HashTag.css
@@ -1,3 +1,11 @@
+.hash-back{
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    z-index: -1;
+    width: 100%;
+    height: 840px;
+}
 .hashtag-page-title-con{
     margin:15px 0;
 }
