--- a/FrontEnd/src/pages/FourthComponent.css
+++ b/FrontEnd/src/pages/FourthComponent.css
@@ -7,9 +7,11 @@
   height: 100%;
 }
 
-/* .component.fourth-component{
-  background-image : url('../../src/img/BGimg.png');
-} */
+.component.fourth-component{
+  /* background-image : url('../../src/img/BGimg.png'); */
+  flex-direction: column;
+
+}
 
 .fourth-container{
   /* display: flex; */
@@ -47,5 +49,9 @@
 .fourth-box-content.only img{
   margin-top:10%;
   padding-bottom:5%;
+}
+
+.downarrow {
+  text-align:center;
 }
 
